[package]
name = "loosen_map"
version = "0.1.1"
authors = ["Thiago <swfsql@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Calls a function with self."
keywords = ["function", "call", "map"]
readme = "README.md"
repository = "https://github.com/swfsql/loosen_map"
documentation = "https://docs.rs/loosen_map/0.1.1/loosen_map/"

[dependencies]

[dev-dependencies]
loosen = "0.1.0"