[package]
name = "ow"
version = "0.1.1"
authors = ["Thiago <swfsql@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Ow calls a function with self."
keywords = ["function", "call", "map"]
readme = "README.md"
repository = "https://github.com/yuulive/ow"
documentation = "https://docs.rs/ow/0.1.1/ow/"

[dependencies]

[dev-dependencies]
loosen = "0.1.0"